--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <label for="svelteFrontend">Svelte Frontend:</label>
                 <select id="svelteFrontend" name="svelteFrontend" style="padding:5px;">
                     <option value="">Válassz projektet</option>
-                    <option value="https://svelte.dev">Svelte Projekt 1</option>
+                    <option value="dist/index.html">Eszközkölcsönzés</option>
                     <option value="https://svelte.dev">Svelte Projekt 2</option>
                     <option value="https://svelte.dev">Svelte Projekt 3</option>
                 </select>
